--- a/parte1/postit.css
+++ b/parte1/postit.css
@@ -23,8 +23,8 @@ body {
 
 .postit {
     width: 20%;
-    height: 200px;
-    box-shadow: 2px 2px 6px black;
+    height: 300px;
+    box-shadow: 5px 5px 7px rgba(33, 33, 33, 0.7);
     margin: 25px;
     padding-left: 4%; 
     display: flex;
@@ -54,6 +54,6 @@ h2 {
 }
 
 .postit:hover {
-    transform: rotate(0deg) scale(1.3, 1.3);
-    box-shadow: 8px 8px 20px black;
+    transform: rotate(0deg) scale(1.1, 1.1);
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.5);
 }
