--- a/parte1/postit.css
+++ b/parte1/postit.css
@@ -18,7 +18,9 @@ body {
   justify-content: center;
   align-content: center;
   padding-top: 50px;
-  height: 100%;
+  max-height: 1000px;
+  max-width: 1700px;
+  margin: 0 auto;
 }
 
 .postit {
@@ -70,7 +72,9 @@ h2 {
   box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.5);
 }
 
-/* --- ANIMAZIONE ---  */
+/*---------------------*/
+/*     ANIMAZIONE      */
+/*---------------------*/
 
 .two {
   animation-delay: 0.5s;
